# elcare-care-app

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  SECURITY_SCANNING_TRIAGE.md  append_test.js  package-lock.json  package.json  update_events.js  update_parser.js
.github/workflows/: ci.yml
contracts/collection_nft_erc1155/src/: lib.rs  test.rs
contracts/collection_nft_erc721/src/: lib.rs  test.rs
contracts/launchpad/: README.md
contracts/launchpad/src/: contract.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/lazy_mint_erc1155/: Cargo.toml
contracts/lazy_mint_erc1155/src/: lib.rs  test.rs
contracts/lazy_mint_erc721/: Cargo.toml
contracts/lazy_mint_erc721/src/: lib.rs  test.rs
contracts/soroban-marketplace/: Cargo.toml  EVENTS.md  IMPLEMENTATION_SUMMARY.md  README.md
contracts/soroban-marketplace/src/: contract.rs  escrow.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
docs/guides/: contract-testing.md  database-migrations.md  deployment.md  event-parsing.md  frontend-transaction-debugging.md  indexer-ingestion.md  local-architecture.md  security-triage.md
frontend/elcarehub-app/: .env.example  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.js
frontend/elcarehub-app/.vercel/: project.json
frontend/elcarehub-app/src/__tests__/: ConnectWalletModal.test.tsx  ListingDetailPage.test.tsx  MyCollectionsPage.test.tsx  ProfileClient.test.tsx  filterReducer.test.ts  useAdmin.test.tsx  useAuctions.test.tsx  useFilterUrlSync.test.tsx  useMarketplace.test.tsx
frontend/elcarehub-app/src/app/: globals.css  layout.tsx  page.tsx
frontend/elcarehub-app/src/components/: AuctionForm.tsx  ConnectWalletModal.tsx  FilterSidebar.tsx  ListingForm.tsx  Navbar.tsx  OfferPanel.tsx  PriceHistoryChart.tsx  SocialShare.tsx
frontend/elcarehub-app/src/config/: tokens.ts
frontend/elcarehub-app/src/hooks/: useAuctions.ts  useFilterUrlSync.ts  useMarketplace.ts
indexer/: .env.example  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  vitest.config.mts  vitest.integration.config.mts
indexer/prisma/: schema.prisma
indexer/src/: config.ts  cors.ts  event-schemas.ts  event-sync.ts  index.ts  ipfs-cache.ts  metrics.ts  parser.ts  poller.ts  retry.ts
indexer/src/__tests__/: api.test.ts  backfill-integration.test.ts  backfill-unit.test.ts  backfill.test.ts  config.test.ts  cors.test.ts  db-pooling.test.ts  deduplication.test.ts  event-catalog.test.ts  event-decode.test.ts  event-sync.test.ts  ipfs-cache.test.ts  keeper-integration.test.ts  keeper-unit.test.ts  metrics.test.ts  migration-safety.test.ts  multi-contract-polling.test.ts  parser.test.ts  poller.test.ts  realtime-hub.test.ts  realtime-stream-ids.test.ts  reorg.test.ts  retry.test.ts  shutdown.test.ts  sse.test.ts
indexer/src/api/: query-schemas.ts  routes.ts
indexer/src/keeper/: tx-pipeline.ts
indexer/src/realtime/: hub.ts  index.ts  stream-ids.ts
patches/soroban-env-host-25.0.1/: .cargo_vcs_info.json  Cargo.toml
scripts/deploy/: deploy_contract.sh  deploy_launchpad.sh  deploy_test_collections.sh  fund_account.sh
(+34 files in other folders)
