[workspace]
members = [
    "contracts/soroban-marketplace",
    "contracts/launchpad",
    "contracts/collection_nft_erc721",
    "contracts/collection_nft_erc1155",
    "contracts/lazy_mint_erc721",
    "contracts/lazy_mint_erc1155",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# soroban-env-host v25.0.1 declares ed25519-dalek ">=2.0.0" but its source
# code uses the v2 API. Force the entire workspace to resolve only v2.2.0 by
# listing it as a workspace dependency (member crates inherit via dep spec).
[workspace.dependencies]
ed25519-dalek = "=2.2.0"
